# test-task-for-basealt

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
libttfb/: CMakeLists.txt
libttfb/include/libttfb/: export_macro.h  package.h  ttfb.h  version.h
libttfb/include/ttfb/: ttfb.h
libttfb/src/: macro.h  package.c  ttfb.c  version.c
libttfb/tests/: CMakeLists.txt  package.test.cpp  ttfb.test.cpp  version.test.cpp
ttfb/: CMakeLists.txt
ttfb/include/ttfb/: cli.h  method.h
ttfb/src/: cli.c  main.c  main.cpp  method.c
